Додав можливіть вевести налаштування бота

--- a/public/monitoring/dashboard.html
+++ b/public/monitoring/dashboard.html
@@ -11,7 +11,12 @@
 <body>
 <header class="header">
     <div class="header-content">
-        <h1>📊 MarketBot Моніторинг</h1>
+
+        <a class="nav-link " href="/">
+            <h1>📊 MarketBot Моніторинг</h1>
+        </a>
+
+
         <div class="header-stats">
             <div class="stat">
                 <span class="stat-label">Статус:</span>
