--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,35 @@
             --warning-color: #ffc107;
         }
 
+        .navbar {
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .navbar-brand {
+            font-weight: 600;
+        }
+
+        .nav-link {
+            transition: all 0.3s ease;
+            position: relative;
+        }
+
+        .nav-link:hover {
+            color: var(--whitebit-color) !important;
+        }
+
+        .nav-link.active::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            height: 3px;
+            background: var(--whitebit-color);
+            border-radius: 2px 2px 0 0;
+        }
+
         .exchange-card {
             transition: all 0.3s ease;
             border: 2px solid transparent;
@@ -147,6 +176,14 @@
             max-width: 600px;
             margin: 0 auto;
         }
+
+        .dropdown-menu {
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        .dropdown-item:hover {
+            background-color: rgba(0, 200, 81, 0.1);
+        }
     </style>
 </head>
 <body class="bg-light">
@@ -155,20 +192,45 @@
 
 <div class="container-fluid">
     <!-- Навігація -->
-    <nav class="navbar navbar-dark bg-dark mb-4 rounded">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 rounded">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">
+            <a class="navbar-brand" href="/">
                 <i class="fas fa-robot"></i> Торговий бот WhiteBit
                 <span class="badge bg-success ms-2" id="botVersion">v1.0.0</span>
-            </span>
-            <div class="d-flex align-items-center">
-                <span class="text-light me-3" id="currentTime"></span>
-                <button id="refreshAll" class="btn btn-outline-light btn-sm me-2">
-                    <i class="fas fa-sync-alt"></i> Оновити
-                </button>
-                <button id="emergencyStop" class="btn btn-danger btn-sm">
-                    <i class="fas fa-stop"></i> Екстрена зупинка
-                </button>
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/">
+                            <i class="fas fa-home"></i> Головна
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/monitoring">
+                            <i class="fas fa-file-alt"></i> Monitoring
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/settings">
+                            <i class="fas fa-cog"></i> Settings
+                        </a>
+                    </li>
+                </ul>
+
+                <div class="d-flex align-items-center">
+                    <span class="text-light me-3" id="currentTime"></span>
+                    <button id="refreshAll" class="btn btn-outline-light btn-sm me-2">
+                        <i class="fas fa-sync-alt"></i> Оновити
+                    </button>
+                    <button id="emergencyStop" class="btn btn-danger btn-sm">
+                        <i class="fas fa-stop"></i> Екстрена зупинка
+                    </button>
+                </div>
             </div>
         </div>
     </nav>
@@ -246,12 +308,17 @@
                 <i class="fas fa-wallet"></i> Баланс
             </button>
         </li>
-
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="system-tab" data-bs-toggle="tab" data-bs-target="#system" type="button">
+                <i class="fas fa-chart-line"></i> Статистика
+            </button>
+        </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="logs-tab" data-bs-toggle="tab" data-bs-target="#logs" type="button">
                 <i class="fas fa-terminal"></i> Логи
             </button>
         </li>
+
     </ul>
 
     <div class="tab-content" id="mainTabsContent">
@@ -303,6 +370,50 @@
         </div>
 
 
+        <!-- Статистика -->
+        <div class="tab-pane fade" id="system" role="tabpanel">
+            <div class="card mt-3">
+                <div class="card-header">
+                    <h5><i class="fas fa-chart-line"></i> Статистика торгівлі</h5>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-3 mb-3">
+                            <div class="card bg-success text-white">
+                                <div class="card-body text-center">
+                                    <h6>Прибуткових угод</h6>
+                                    <h3>45</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                            <div class="card bg-danger text-white">
+                                <div class="card-body text-center">
+                                    <h6>Збиткових угод</h6>
+                                    <h3>12</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                            <div class="card bg-primary text-white">
+                                <div class="card-body text-center">
+                                    <h6>Загальний прибуток</h6>
+                                    <h3>+$567</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                            <div class="card bg-info text-white">
+                                <div class="card-body text-center">
+                                    <h6>Win Rate</h6>
+                                    <h3>78%</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Логи -->
         <div class="tab-pane fade" id="logs" role="tabpanel">
@@ -332,5 +443,28 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/dashboard.js"></script>
+<script>
+    // Оновлення часу
+    function updateTime() {
+        const now = new Date();
+        document.getElementById('currentTime').textContent = now.toLocaleString('uk-UA');
+    }
+    setInterval(updateTime, 1000);
+    updateTime();
+
+    // Підсвітка активної сторінки в меню
+    document.addEventListener('DOMContentLoaded', function() {
+        const currentPath = window.location.pathname;
+        document.querySelectorAll('.navbar-nav .nav-link').forEach(link => {
+            if (link.getAttribute('href') === currentPath) {
+                link.classList.add('active');
+            } else {
+                link.classList.remove('active');
+            }
+        });
+    });
+
+
+</script>
 </body>
 </html>
